# GGSet

./: .gitignore  README.md  example-usage.ipynb  pyproject.toml  t.ipynb  t.py
src/ggset/: __init__.py  common_dataset_strategies.py  ggset.py
tests/: test_ggset.py  test_imports.py
