[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "GGDir"
version = "0.1.0"
description = "GGDir Python package"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gregor Grote" }]
dependencies = [
	"opencv-python>=4.10",
	"pandas>=2.2",
	"PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
