[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ggset"
version = "0.9.2"
description = "Utilities for navigating and managing dataset folders"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Gregor Grote" }]
dependencies = [
	"numpy>=1.0",
	"pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/gregor-grote/GGSet"
Repository = "https://github.com/gregor-grote/GGSet"
Issues = "https://github.com/gregor-grote/GGSet/issues"

[project.optional-dependencies]
dev = [
	"pytest>=8",
	"pytest-cov>=5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
